--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGlcsfl6SeeGQDK8ASJP4_8f6l6NBGbOk"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGlcsfl6SeeGQDK8ASJP4_8f6l6NBGbOk&callback=Function.prototype"></script>
 </head>
 <body class="thin-scrollbar">
 <app-root></app-root>
